fixed layout issue where added buttons moved elements lower on page

--- a/style.css
+++ b/style.css
@@ -29,12 +29,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.left-side {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
 .search-box {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 25%;
-    height: 20%;
     margin-left: 10px;
     margin-bottom: 10px;
     padding-bottom: 20px; 
@@ -80,11 +84,11 @@ body {
     justify-content: space-evenly;
     border-style: solid;
     border-color: rgb(210, 210, 210);
-    width: 70%;
+    /* width: 70%;
     height: 150px;
     margin-left: 27%;
     margin-top: -161px;
-    margin-bottom: 10px;
+    margin-bottom: 10px; */
     padding-left: 5px;
 }
 
@@ -92,9 +96,9 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 136px;
+    /* height: 136px;
     width: 71%;
-    margin-left: 27%;
+    margin-left: 27%; */
 }
 
 .card {
@@ -115,3 +119,17 @@ body {
     font-size: 18px;
 }
 
+
+
+.weather-section {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.page-layout {
+    display: flex;
+    flex-direction: row;
+}
